提供无锁，偏向锁，轻量锁，重量锁 事例